--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -68,12 +68,17 @@ strong {
 .info, .status {
   font-size: 1.5em;
   color: #444;
-  margin: 20px 0px; }
+  margin: 30px 0px; }
 
 .status {
   text-align: center;
-  color: #CCC;
+  color: #AAA;
   font-style: italic; }
+
+.status .small {
+    display: block;
+    font-size: 0.75em;
+}
 
 .article {
   margin: auto;
