--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -66,8 +66,17 @@ strong {
   font-size: 24px; }
 
 .info, .status {
+  border: 5px dashed #DDD;
+  border-radius: 20px;
+  -moz-border-radius: 20px;
+  -webkit-border-radius: 20px;
+  text-align: center;
+  text-shadow: none;
+  background: #F0F0F0;
+  padding: 20px;
+  margin: 0px -20px;
   font-size: 1.5em;
-  color: #444;
+  color: #AAA;
   margin: 30px 0px; }
 
 .status {
@@ -130,4 +139,4 @@ input#send {
   font: 15px HelveticaNeue-Light, "Helvetica Neue Light", "Helvetica Neue", Helvetica, arial, sans-serif;
   text-align: center;
   text-shadow: 0px 1px 1px white;
-  margin: 20px 0px 10px 0px; }
+  margin: 50px 0px 10px 0px; }
