--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,142 +1,95 @@
-body {
-  background: #f5f5f5;
-  color: #555555;
-  font: 300 16px/1.5 "Palatino Linotype", Linotype, "URW Palladio L", Palladio, "Book Antiqua", Georgia, sans-serif;
-  text-shadow: 0px 1px 1px white; }
-
-p {
-  margin-bottom: 15px; }
-
-a, input#send {
-  border-bottom: 1px solid #DEDEDE;
-  color: #07C;
-  text-decoration: none; }
-
-a:hover, input#send:hover {
-  transition: all 0.3s;
-  -webkit-transition: all 0.3s;
-  -moz-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  color: inherit;
-  background: #EEE;
-  border-color: #EEE; }
-
-h1, h2, h3, h4, h5, h6 {
-  font-weight: normal; }
-
-h1, h2 {
-  margin: auto;
-  text-align: center;
-  width: 700px; }
-
-h1 {
-  font-size: 30px; }
-
-h2 {
-  font-size: 24px; }
-
-h3 {
-  color: #000;
-  font-size: 24px;
-  font-style: italic;
-  margin-top: 1em; }
-
-strong {
-  color: #000; }
-
-.amp {
-  font-family: Baskerville, Palatino, "Book Antiqua", serif;
-  font-style: italic; }
-
-.header, .header-small {
-  background: 10px 180px url('../images/header.jpg') #1a1c1d;
-  border-bottom: 1px solid white;
-  color: #BBB;
-  padding: 50px 0px;
-  text-shadow: 0px 2px 1px #000; }
-  .header .who, .header-small .who {
-    color: #FFF; }
-  .header .what, .header-small .what {
-    color: #FFF; }
-
-.header-small {
-  padding: 10px 0px; }
-
-.header-small h1 {
-  font-size: 24px; }
-
-.info, .status {
-  border: 5px dashed #DDD;
-  border-radius: 20px;
-  -moz-border-radius: 20px;
-  -webkit-border-radius: 20px;
-  text-align: center;
-  text-shadow: none;
-  background: #F0F0F0;
-  padding: 20px;
-  margin: 0px -20px;
-  font-size: 1.5em;
-  color: #AAA;
-  margin: 30px 0px; }
-
-.status {
-  text-align: center;
-  color: #AAA;
-  font-style: italic; }
-
-.status .small {
-    display: block;
-    font-size: 0.75em;
+html, body {
+  width: 100%;
+  height: 100%;
 }
 
-.article {
+body {
+  font-family: 'Montserrat', sans-serif;
+  display:-ms-flexbox;
+  -ms-flex-pack:center;
+  -ms-flex-align:center;
+  display:-moz-box;
+  -moz-box-pack:center;
+  -moz-box-align:center;
+  display:-webkit-box;
+  -webkit-box-pack:center;
+  -webkit-box-align:center;
+  display:box;
+  box-pack:center;
+  box-align:center;
+}
+
+.card {
+  width: 300px;
   margin: auto;
-  width: 700px; }
+}
 
-.post h3 {
-  text-align: center; }
-
-.post .date {
-  text-align: center;
-  margin-top: -5px;
-  font-size: 14px;
-  color: #AAA; }
-
-.one-third {
-  margin: 0px 20px 0px 0px;
-  width: 180px;
-  float: left; }
-
-.two-thirds {
-  width: 500px;
-  float: left; }
-
-form {
-  overflow: hidden;
-  zoom: 1; 
-  }
-
-textarea {
-  background: #EEE;
-  border: none;
+.profile-photo {
+  border-radius: 1000px;
   display: block;
-  width: 500px;
-  height: 100px;
-  font: 300 16px/1.5 "Palatino Linotype", Linotype, "URW Palladio L", Palladio, "Book Antiqua", Georgia, sans-serif;
-  border-left: 5px solid #DDD; }
+  height: 300px;
+  margin: 50px auto;
+  width: 300px;
+}
 
-input#send {
-  border: none;
-  border-bottom: 1px solid #DEDEDE;
-  background: #f5f5f5;
-  cursor: pointer;
-  margin: 20px 0px;
-  padding: 0px 0px;
-  font: 300 16px/1.5 "Palatino Linotype", Linotype, "URW Palladio L", Palladio, "Book Antiqua", Georgia, sans-serif; }
+a {
+  color: #000;
+  text-decoration: none;
+  border-bottom: 1px solid #CCC;
+}
 
-.copyright {
-  color: #999;
-  font: 15px HelveticaNeue-Light, "Helvetica Neue Light", "Helvetica Neue", Helvetica, arial, sans-serif;
+a:hover {
+  border-color: #AAB;
+}
+
+h1 {
+  font-size: 39px;
+  letter-spacing: -2px;
+  margin-bottom: 5px;
+}
+
+h2 {
+  font-size: 16px;
+  margin: 0px;
+}
+
+h1, h2 {
+  height: 1em;
+  font-weight: 100;
+  text-align: justify;
+}
+
+h1:after,
+h2:after {
+  content: "";
+  display: inline-block;
+  width: 100%;
+}
+
+
+ul {
+  display: block;
+  width: 100%;
+  list-style-type: none;
+  padding: 0px;
+  font-size: 0px;
+}
+
+li {
+  display: inline-block;
+  width: 100px;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
   text-align: center;
-  text-shadow: 0px 1px 1px white;
-  margin: 50px 0px 10px 0px; }
+  font-size: 16px;
+}
+
+li:first-child {
+  text-align: left;
+}
+
+li:last-child {
+  text-align: right;
+
+}
