--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -20,44 +20,46 @@ body {
 }
 
 .card {
-  width: 300px;
+  height: 250px;
   margin: auto;
+  width: 600px;
 }
 
 .profile-photo {
   border-radius: 1000px;
   display: block;
-  height: 300px;
-  margin: 50px auto;
+  height: 250px;
+  float: left;
+  width: 250px;
+}
+
+.info {
+  float: left;
+  margin: 50px 0 0 50px;
   width: 300px;
+  height: 125px;
 }
 
-a {
-  color: #000;
-  text-decoration: none;
-  border-bottom: 1px solid #CCC;
-}
-
-a:hover {
-  border-color: #AAB;
-}
-
-h1 {
-  font-size: 39px;
-  letter-spacing: -2px;
-  margin-bottom: 5px;
-}
-
-h2 {
-  font-size: 16px;
-  margin: 0px;
+.info > * {
+  margin-bottom: 23px;
 }
 
 h1, h2 {
   height: 1em;
   font-weight: 100;
-  text-align: justify;
+  margin: 0;
 }
+
+h1 {
+  font-size: 39px;
+  letter-spacing: -2px;
+}
+
+h2 {
+  font-size: 16px;
+  margin-left: 2px;
+}
+
 
 h1:after,
 h2:after {
@@ -66,30 +68,52 @@ h2:after {
   width: 100%;
 }
 
+a {
+  color: #000;
+  text-decoration: none;
+}
+
+h2 a {
+  color: #777;
+}
+
+h2 a:hover {
+  color: #000;
+}
 
 ul {
   display: block;
-  width: 100%;
   list-style-type: none;
   padding: 0px;
   font-size: 0px;
+  margin: -5px 0 0 -16px;
 }
 
 li {
   display: inline-block;
-  width: 100px;
   margin: 0;
-  padding: 0;
+  padding: 0 10px;
   list-style-type: none;
+  font-size: 22px;
+}
+
+.networks a {
+  width: 40px;
+  height: 40px;
+  display: block;
   text-align: center;
-  font-size: 16px;
+  line-height: 39px;
+  border-radius: 55px;
 }
 
-li:first-child {
-  text-align: left;
+.networks a:hover {
+  background: #ddd;
 }
 
-li:last-child {
-  text-align: right;
+.networks span {
+  display: none;
+}
 
+.icon-mail {
+  font-size: 21px;
 }
