--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,3 +1,27 @@
+@-webkit-keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+   @-moz-keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+        @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+
+body {
+  opacity: 0;
+
+  -webkit-animation: fadeIn ease-in;
+     -moz-animation: fadeIn ease-in;
+          animation: fadeIn ease-in;
+
+  -webkit-animation-fill-mode: forwards;
+     -moz-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+
+  -webkit-animation-duration: 0.2s;
+     -moz-animation-duration: 0.2s;
+          animation-duration: 0.2s;
+
+  -webkit-animation-delay: 0.25s;
+     -moz-animation-delay: 0.25s;
+          animation-delay: 0.25s;
+}
+
 html, body {
   width: 100%;
   height: 100%;
